--- a/backend/Challenge/ML model/V2.ipynb
+++ b/backend/Challenge/ML model/V2.ipynb
@@ -34,6 +34,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From d:\\Travelio ML v2\\myenv\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
       "Found 302 images belonging to 7 classes.\n",
       "Found 73 images belonging to 7 classes.\n"
      ]
@@ -42,6 +44,7 @@
    "source": [
     "import os\n",
     "import tensorflow as tf\n",
+    "\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
     "# Set the path to your dataset\n",
@@ -97,8 +100,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "\u001b[1m58889256/58889256\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 0us/step\n"
+      "WARNING:tensorflow:From d:\\Travelio ML v2\\myenv\\lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\Travelio ML v2\\myenv\\lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\Travelio ML v2\\myenv\\lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
      ]
     }
    ],
@@ -146,40 +153,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\doem1\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
-      "  self._warn_if_super_not_called()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m114s\u001b[0m 7s/step - accuracy: 0.2364 - loss: 5.3934 - val_accuracy: 0.6301 - val_loss: 1.0923\n",
+      "Epoch 1/10\n",
+      "WARNING:tensorflow:From d:\\Travelio ML v2\\myenv\\lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From d:\\Travelio ML v2\\myenv\\lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "10/10 [==============================] - 189s 19s/step - loss: 4.2601 - accuracy: 0.3311 - val_loss: 0.9093 - val_accuracy: 0.5890\n",
       "Epoch 2/10\n",
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m106s\u001b[0m 5s/step - accuracy: 0.6262 - loss: 1.5277 - val_accuracy: 0.8356 - val_loss: 0.4633\n",
+      "10/10 [==============================] - 129s 13s/step - loss: 1.2602 - accuracy: 0.6457 - val_loss: 0.5906 - val_accuracy: 0.7808\n",
       "Epoch 3/10\n",
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m107s\u001b[0m 6s/step - accuracy: 0.8223 - loss: 0.4763 - val_accuracy: 0.8493 - val_loss: 0.4408\n",
+      "10/10 [==============================] - 127s 13s/step - loss: 0.5189 - accuracy: 0.8377 - val_loss: 0.4260 - val_accuracy: 0.8356\n",
       "Epoch 4/10\n",
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m102s\u001b[0m 7s/step - accuracy: 0.8577 - loss: 0.3222 - val_accuracy: 0.8767 - val_loss: 0.3330\n",
+      "10/10 [==============================] - 127s 13s/step - loss: 0.3304 - accuracy: 0.8742 - val_loss: 0.4084 - val_accuracy: 0.8356\n",
       "Epoch 5/10\n",
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m84s\u001b[0m 5s/step - accuracy: 0.9130 - loss: 0.2315 - val_accuracy: 0.9178 - val_loss: 0.2844\n",
+      "10/10 [==============================] - 127s 13s/step - loss: 0.2311 - accuracy: 0.9172 - val_loss: 0.4015 - val_accuracy: 0.8356\n",
       "Epoch 6/10\n",
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m111s\u001b[0m 6s/step - accuracy: 0.9412 - loss: 0.1832 - val_accuracy: 0.8630 - val_loss: 0.4060\n",
+      "10/10 [==============================] - 128s 13s/step - loss: 0.1550 - accuracy: 0.9503 - val_loss: 0.4193 - val_accuracy: 0.8219\n",
       "Epoch 7/10\n",
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 4s/step - accuracy: 0.9480 - loss: 0.1300 - val_accuracy: 0.9178 - val_loss: 0.2484\n",
+      "10/10 [==============================] - 127s 13s/step - loss: 0.1314 - accuracy: 0.9570 - val_loss: 0.2778 - val_accuracy: 0.9452\n",
       "Epoch 8/10\n",
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m64s\u001b[0m 4s/step - accuracy: 0.9364 - loss: 0.1421 - val_accuracy: 0.9041 - val_loss: 0.3083\n",
+      "10/10 [==============================] - 131s 13s/step - loss: 0.1164 - accuracy: 0.9636 - val_loss: 0.3533 - val_accuracy: 0.8630\n",
       "Epoch 9/10\n",
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m70s\u001b[0m 4s/step - accuracy: 0.9619 - loss: 0.1095 - val_accuracy: 0.8767 - val_loss: 0.3300\n",
+      "10/10 [==============================] - 99s 9s/step - loss: 0.0951 - accuracy: 0.9570 - val_loss: 0.3447 - val_accuracy: 0.8904\n",
       "Epoch 10/10\n",
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m71s\u001b[0m 4s/step - accuracy: 0.9749 - loss: 0.0878 - val_accuracy: 0.9178 - val_loss: 0.2650\n"
+      "10/10 [==============================] - 79s 8s/step - loss: 0.1157 - accuracy: 0.9636 - val_loss: 0.4945 - val_accuracy: 0.8356\n"
      ]
     }
    ],
@@ -203,7 +200,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_json = model.to_json()\n",
+    "with open(\"model_architecture.json\", \"w\") as json_file:\n",
+    "    json_file.write(model_json)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.15.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "id": "KXNhJEwTMGUs"
    },
@@ -212,7 +237,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+      "d:\\Travelio ML v2\\myenv\\lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
      ]
     }
    ],
@@ -240,24 +266,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "id": "g2UpwPWvMP7S"
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 253ms/step\n",
-      "The image is predicted to be: KHALIFA_TOWER\n"
+      "1/1 [==============================] - 1s 910ms/step\n",
+      "The image is predicted to be: GIZA_PYRAMIDS\n"
      ]
     }
    ],
@@ -267,7 +286,7 @@
     "from tensorflow.keras.preprocessing import image\n",
     "\n",
     "# Load the model\n",
-    "model = load_model('attraction_model.h5')\n",
+    "model1 = load_model('attraction_model.h5')\n",
     "\n",
     "# Function to predict the class of a single image\n",
     "def predict_image(img_path, model):\n",
@@ -282,24 +301,10 @@
     "    return class_label\n",
     "\n",
     "# Predict an image\n",
-    "img_path = 'E:\\downloads\\WhatsApp Image 2024-06-26 at 20.42.50_0edd5e07.jpg'\n",
-    "predicted_class = predict_image(img_path, model)\n",
+    "img_path = './Test pics/khofo_edit.jpg'\n",
+    "predicted_class = predict_image(img_path, model1)\n",
     "print(f'The image is predicted to be: {predicted_class}')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -321,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
